// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorInput.vue renders OXD Color Input 1`] = `
<div class="std-color-input std-color-input--active" tabindex="0">
  <div class="std-color-input-preview" style="background-color: rgb(0, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`ColorInput.vue renders OXD Color Input with color 1`] = `
<div class="std-color-input std-color-input--active" tabindex="0">
  <div class="std-color-input-preview" style="background-color: rgb(255, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub>
    <!--v-if-->
  </transition-stub>
</div>
`;

exports[`ColorInput.vue should accept 6 digit hex input 1`] = `
<div class="std-color-input std-color-input--active std-color-input--focus" tabindex="0">
  <div class="std-color-input-preview" style="background-color: rgb(0, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub>
    <div role="alert" class="std-color-picker --positon-right">
      <div class="std-color-picker-indicator" style="top: 0px; left: 228px;"></div><canvas width="228" height="228" class="std-color-picker-palette"></canvas><input class="std-color-picker-range" type="range" max="359"><label class="std-label std-color-picker-label">HEX</label><input class="std-input std-input--active">
    </div>
  </transition-stub>
</div>
`;

exports[`ColorInput.vue should not accept 3 digit hex input 1`] = `
<div class="std-color-input std-color-input--active std-color-input--focus" tabindex="0">
  <div class="std-color-input-preview" style="background-color: rgb(0, 0, 0); opacity: 1; cursor: pointer;"></div>
  <transition-stub>
    <div role="alert" class="std-color-picker --positon-right">
      <div class="std-color-picker-indicator" style="top: 0px; left: 228px;"></div><canvas width="228" height="228" class="std-color-picker-palette"></canvas><input class="std-color-picker-range" type="range" max="359"><label class="std-label std-color-picker-label">HEX</label><input class="std-input std-input--active">
    </div>
  </transition-stub>
</div>
`;
